# 2023_KMU_Autonomous_team_AuTURBO_rookie

./: .gitignore  .gitmodules  README.md
ar_track_alvar/: .travis.yml
ar_track_alvar/ar_track_alvar/: CMakeLists.txt  package.xml
ar_track_alvar/ar_track_alvar/include/ar_track_alvar/: Alvar.h  AlvarException.h  Bitset.h  Camera.h  Capture.h  CaptureDevice.h  CaptureFactory.h  CaptureFactory_private.h  CapturePlugin.h  ConnectedComponents.h  Container3d.h  CvTestbed.h  DirectoryIterator.h  DirectoryIterator_private.h  Draw.h  EC.h  FernImageDetector.h  FernPoseEstimator.h  FileFormat.h  FileFormatUtils.h  Filter.h  GlutViewer.h  IntegralImage.h  Kalman.h  Line.h  Lock.h  Marker.h  MarkerDetector.h  MultiMarker.h  MultiMarkerBundle.h  MultiMarkerFiltered.h  MultiMarkerInitializer.h  Mutex.h  Mutex_private.h  Optimization.h  Platform.h  Plugin.h  Plugin_private.h  Pose.h  Ransac.h  (+16 more)
ar_track_alvar/ar_track_alvar/include/ar_track_alvar/filter/: kinect_filtering.h  medianFilter.h
ar_track_alvar/ar_track_alvar/launch/: pr2_bundle_no_kinect.launch  pr2_indiv_no_kinect.launch
ar_track_alvar/ar_track_alvar/nodes/: FindMarkerBundles.cpp  FindMarkerBundlesNoKinect.cpp  IndividualMarkers.cpp  IndividualMarkersNoKinect.cpp  TrainMarkerBundle.cpp
ar_track_alvar/ar_track_alvar/src/: Alvar.cpp  Bitset.cpp  Camera.cpp  CaptureDevice.cpp  CaptureFactory.cpp  CaptureFactory_unix.cpp  CaptureFactory_win.cpp  ConnectedComponents.cpp  CvTestbed.cpp  DirectoryIterator.cpp  DirectoryIterator_unix.cpp  DirectoryIterator_win.cpp  Draw.cpp  EC.cpp  FernImageDetector.cpp  FernPoseEstimator.cpp  FileFormatUtils.cpp  Filter.cpp  GlutViewer.cpp  IntegralImage.cpp  Kalman.cpp  Line.cpp  Marker.cpp  MarkerDetector.cpp  MultiMarker.cpp  MultiMarkerBundle.cpp  MultiMarkerFiltered.cpp  MultiMarkerInitializer.cpp  Mutex.cpp  Mutex_unix.cpp  Mutex_win.cpp  Optimization.cpp  Platform.cpp  Plugin.cpp  Plugin_unix.cpp  Plugin_win.cpp  Pose.cpp  Ransac.cpp  Rotation.cpp  SampleCamCalib.cpp  (+30 more)
ar_track_alvar/ar_track_alvar/src/platform/capture_plugin_cmu/: CapturePluginCmu.cpp  CapturePluginCmu.h
ar_track_alvar/ar_track_alvar/src/platform/capture_plugin_dscapture/: CapturePluginDSCapture.cpp  CapturePluginDSCapture.h
ar_track_alvar/ar_track_alvar/src/platform/capture_plugin_file/: CapturePluginFile.cpp  CapturePluginFile.h
ar_track_alvar/ar_track_alvar/src/platform/capture_plugin_highgui/: CapturePluginHighgui.cpp  CapturePluginHighgui.h
ar_track_alvar/ar_track_alvar/src/platform/capture_plugin_ptgrey/: CapturePluginPtgrey.cpp  CapturePluginPtgrey.h
ar_track_alvar/ar_track_alvar/test/: test_kinect_filtering.cpp  test_points.cpp
ar_track_alvar/ar_track_alvar_msgs/: CMakeLists.txt
auturbo_controller/: CMakeLists.txt  package.xml  setup.py
auturbo_controller/nodes/: coordinate_test.py  integration.py  obstacle_detector.py  pid.py  pursuit.py  stanley.py  sub_val_pub_angle_node.py
auturbo_rookie_bringup/: CMakeLists.txt  package.xml
auturbo_rookie_bringup/launch/: bringup.launch  bringup_bag.launch
auturbo_rookie_bringup/rviz/: config_file.rviz
auturbo_rookie_controller/: CMakeLists.txt  package.xml  setup.py
auturbo_rookie_controller/launch/: bringup.launch
auturbo_rookie_controller/nodes/: backup.py  coordinate_test.py  sub_val_pub_angle_node.py
auturbo_rookie_controller/rviz/: config_file.rviz
auturbo_rookie_controller/src/: Timer.py  Xycar.py  XycarSensor.py  main.py
auturbo_rookie_controller/src/Controller/: ARController.py  ARCurveController.py  ModeController.py  PursuitController.py  RubberconController.py  integration.py  lava.py
auturbo_rookie_controller/src/Detector/: BEV.py  BEV_hough.py  LaneDetector.py  LaneDetectorHough.py  LineDetector.py  LineDetectorHough.py  ObjectDetector.py  ObstacleDetector.py  PreProcessor.py  StopLineDetector.py
auturbo_rookie_controller/src/Detector/utils/: Calibration_result.yaml  img_save_calibration.py  undistort.py  yolo_img_save.py
auturbo_rookie_joy/: CMakeLists.txt  package.xml
auturbo_rookie_joy/src/: joy_xycar_control.py
auturbo_rookie_perception/: CMakeLists.txt  README.md  package.xml
auturbo_rookie_perception/src/: Calibration_result.yaml  ar_tag_follower.py  bev.py  line_detector.py  preprocessor.py
auturbo_rookie_perception/src/utils/: Calibration_result.yaml  MovingAverage.py  calibraion.py  cam.py  img_save.py
previous/: README.md
previous/2020_KMU_AUTORACE/: README.md
previous/2020_KMU_AUTORACE/launch/: parking.launch  race.launch  race_bright.launch
previous/2020_KMU_AUTORACE/src/: CurveDetector.py  ObstacleDetector.py  StopDetector.py  main.py  parking.py  pidcal.py  posecal.py  ros_main.py  ros_main_bright.py  ros_main_slide2.py  slidewindow.py  slidewindow2.py  warper.py
previous/2021_KMU_AUTORACE/: .gitmodules  README.md
previous/2021_KMU_AUTORACE/ar_track_alvar/: .travis.yml
previous/2021_KMU_AUTORACE/launch/: final.launch
previous/2021_KMU_AUTORACE/src/: Laser.py  ObstacleDetector.py  Pidcal.py  RLineDetection.py  Slidewindow.py  Stop_Counter.py  Stop_Detector.py  Ultrasonic.py  main.py
previous/KMU_Autonomous_Driving/: CMakeLists.txt  LICENSE  README.md  package.xml
previous/KMU_Autonomous_Driving/launch/: xycar_simv.launch
previous/KMU_Autonomous_Driving/rviz/: xycar.rviz
previous/auto-contest-2020/: README.md
previous/auto-contest-2020/src/: main.py  (+26 more)
xycar_msgs/: CMakeLists.txt  README.md  package.xml
xycar_msgs/msg/: xycar_motor.msg  xycar_ultrasounds.msg
xytronY/: CMakeLists.txt  package.xml
xytronY/config/: joint_names_xytronY.yaml
xytronY/launch/: display.launch  gazebo.launch
xytronY/meshes/: B_L_link.STL  B_R_link.STL  F_L_link.STL  F_R_link.STL  Lidar_link.STL  Ulteasonic_B_L_link.STL  Ulteasonic_B_M_link.STL  Ulteasonic_B_R_link.STL  Ulteasonic_L_link.STL  Ulteasonic_R_link.STL  base_link.STL  cam_link.STL
xytronY/rviz/: urdf.rviz
xytronY/urdf/: xytronY.csv  xytronY.urdf
xytronY/worlds/: plane_track.world  test.world
yolov5_ros/: CMakeLists.txt
yolov5_ros/data/: data_augment.yaml  temp.txt
yolov5_ros/launch/: yolov5.launch
yolov5_ros/src/: detect.py
(+15 files in other folders)
